--- a/Assignment2_SebastianSeck_MarvinKönig_VeraWeidmann.Rmd
+++ b/Assignment2_SebastianSeck_MarvinKönig_VeraWeidmann.Rmd
@@ -16,19 +16,84 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r Initialization, warning=FALSE, message=FALSE}
 library(foreign) #to read in the .dta format
 library(stargazer)
+library(dplyr)
+library(ggplot2)
 ksubs <- read.dta("401ksubs.dta")
 wagepan <- read.dta("WAGEPAN.DTA")
 ```
 
 ##Task 1
+```{r}
+head(ksubs)
+```
 
-#### 1(a) Summary statistics
+First of all, as the exercise description requires just the data for married couples without children (marr=1, fsize = 2), we have to filter our data. This is done by using the r-package dplyr. 
+
+The new data table is saved in the new object: ksubs_1
+```{r}
+ksubs_1 <- ksubs %>%
+  filter(marr ==1 & fsize == 2)
+```
+
+#### 1(a) Youngest age of the household head
+```{r}
+summary(ksubs_1$age)
+```
+The youngest age of the household head in this sample is 25. 
+
+```{r}
+ksubs_1_age <- ksubs_1 %>%
+  group_by(age) %>%
+  summarise(n=n()) %>%
+  arrange(age)
+
+head(ksubs_1_age)
+paste("Number of households in the restricted dataset:", nrow(ksubs_1))
+
+ggplot(ksubs_1_age,aes(age,n))+geom_col()+labs(
+      y="Number of household heads",
+      x="Age",
+      title="Household heads per age")
+```
+So, 29 households heads are at the age of 25. In total, we have 1494 married households without children. 
+
+#### 1(b) Model & Coefficients (1)
+the regression $nettfa = \beta_0 + \beta_1 * inc + \beta_2 * age + \beta_3 * age^2 + u$ gives information about the relationship between the independet variables, also called predictor, ($inc, age, age^2$) and the dependent variable ($nettfa$)
+
+As this model is a lin-lin model, one unit increase of one of the predictors (while holding the others fix) will lead to an increase in nettfa by the predictors coefficient.
+
+$\frac{\delta nettfa}{\delta inc}=\beta_1$
+$\frac{\delta nettfa}{\delta age}=\beta_2 + 2*\beta_3*age$
+
+$\beta_0$ is the intercept of the model. This illustarted the value of nettfa when all predictors are equal to 0. 
+
+#### 1(c) Model & Coefficients (2)
+```{r}
+mod1b <- lm(nettfa ~ inc + age + agesq, data = ksubs_1)
+summary(mod1b)
+
+paste("n:", nrow(ksubs_1))
+```
+
+As mentioned in 2(b) the intercept of the model with the value of -39.74 is the value of nettfam while predictors are equal to 0. If one predictor is increased by one, e.g. one unit (1,000 dollars) more in inc, that nettfa will increase by $\beta = 1.3$ (1,300 dollars). The increase of one change in age depends on the value of age itself as the regression model included $age^2$. 
+
+The calculation of the turnaround point is 
+$x = | \frac{\beta_2}{2*\beta_3} |= |\frac{-1.56905}{2*0.03647}| = 21.51 $. This means starting with an age of 22 the nettfam will increase, before 22 the nettfam will decrease. 
+
+The partial effect of age on nettfa for someone who is aged 30 years is:
+$\frac{\delta nettfa}{\delta age}=\beta_2 + 2*\beta_3*age = -1.56905 + 2*0.03647*30 = 0.61915$ (619 dollars)
+
+#### 1(d) Regression for age = 25
+```{r}
+
+```
+
 
 ##Task 2
 
-#### 2(a) Summary statistics
+#### 2(a) 
 
 ##Task 3
 
-####3(i) Model statistics
+####3(a) 
 
