--- a/Assignment2_SebastianSeck_MarvinKönig_VeraWeidmann.Rmd
+++ b/Assignment2_SebastianSeck_MarvinKönig_VeraWeidmann.Rmd
@@ -19,6 +19,7 @@ library(stargazer)
 library(dplyr)
 library(ggplot2)
 library(multcomp)
+library(plm)
 ksubs <- read.dta("401ksubs.dta")
 wagepan <- read.dta("WAGEPAN.DTA")
 ```
@@ -57,6 +58,7 @@ ggplot(ksubs_1_age,aes(age,n))+geom_col()+labs(
       x="Age",
       title="Household heads per age")
 ```
+<br/>
 So, 29 households heads are at the age of 25. In total, we have 1494 married households without children. 
 
 #### 1(b) Model & Coefficients (1)
@@ -65,6 +67,7 @@ the regression $nettfa = \beta_0 + \beta_1 * inc + \beta_2 * age + \beta_3 * age
 As this model is a level-level model, one unit increase of one of the predictors (while holding the others fix) will lead to an increase in nettfa by the predictors coefficient.
 
 $\frac{\delta nettfa}{\delta inc}=\beta_1$
+<br/>
 $\frac{\delta nettfa}{\delta age}=\beta_2 + 2*\beta_3*age$
 
 $\beta_0$ is the intercept of the model. This illustarted the value of nettfa when all predictors are equal to 0. 
@@ -80,11 +83,11 @@ paste("n:", nrow(ksubs_1))
 As mentioned in 2(b) the intercept of the model with the value of -39.74 is the value of nettfam while predictors are equal to 0. If one predictor is increased by one, e.g. one unit (1,000 dollars) more in inc, that nettfa will increase by $\beta = 1.3$ (1,300 dollars). The increase of one change in age depends on the value of age itself as the regression model included $age^2$. 
 
 The calculation of the turnaround point is 
-$x = | \frac{\beta_2}{2*\beta_3} |= |\frac{-1.56905}{2*0.03647}| = 21.51 $. This means starting with an age of 22 the nettfam will increase, before 22 the nettfam will decrease. 
+$x = | \frac{\beta_2}{2*\beta_3} |= |\frac{-1.56905}{2*0.03647}| = 21.51$. This means starting with an age of 22 the nettfam will increase, before 22 the nettfam will decrease. 
 
 The partial effect of age on nettfa for someone who is aged 30 years is:
 $$
-\frac{\delta nettfa}{\delta age}=\beta_2 + 2*\beta_3*age = -1.56905 + 2*0.03647*30 = 0.61915 = 619 Dollars
+\frac{\delta nettfa}{\delta age}=\beta_2 + 2*\beta_3*age = -1.56905 + 2*0.03647*30 = 0.61915 = 619\space Dollars 
 $$
 
 #### 1(d) Regression for age of 25
@@ -104,7 +107,7 @@ $nettfa = \beta_0 + \beta_1 * inc + \theta_2 * age - \beta_3 *2*25 * age + \beta
 
 $nettfa = \beta_0 + \beta_1 * inc + \theta_2 * age + \beta_3 (age^2 - 2*25*age) + u$
 
-The intercept of the regression model for household heads with age 25 is shifted by the effect of $25^2 = 625$). Therefore, we adhust $\beta_0$ to $\alpha_0$.
+The intercept of the regression model for household heads with age 25 is shifted by the effect of $25^2 = 625$). Therefore, we adjust $\beta_0$ to $\alpha_0$.
 
 $nettfa = \alpha_0 + \beta_1 * inc + \theta_2 * age + \beta_3 (age^2-2*25*age+625) + u$
 
@@ -117,11 +120,11 @@ mod1d <- lm(nettfa ~ inc + age + age25, data = ksubs_1)
 (sum_mod1d <- summary(mod1d))
 ```
 
-$H_0: \theta_2 =0 $ ; (two-sided test, $\alpha = 0.05$)
+$H_0: \theta_2 =0$ ; (two-sided test, $\alpha = 0.05$)
 
-As the p-value of $\theta_2 = 0.72294 > 0.05$ H0 cannot be rejected. This variable might not have an significant effect on the dependet variable nettfam. 
+As the p-value of $\theta_2 = 0.72294 > 0.05$, $H_0$ cannot be rejected. This variable might not have an significant effect on the dependet variable nettfam. 
 
-The lincom command (in R: car-package) can be used to model the equation by unsing the original one without modifing the model. 
+The lincom command (in R: car-package) can be used to model the equation by using the original one without modifing the model. 
 
 
 
@@ -129,7 +132,7 @@ HELP!!!
 
 
 lincom command??? Linear combinations of parameters -> linear hypothesis- package: car? john foxed
-Können es auch weg lassen nach Quari :D 
+K?nnen es auch weg lassen nach Quari :D 
 
 
 ```{r}
@@ -161,15 +164,18 @@ In the first model (mod1b) the intercept presents the value of nettfa while all 
 ```{r}
 mod1f <- lm(nettfa ~ inc + age25, data = ksubs_1)
 (sum_mod1f<- summary(mod1f))
+```
 
-#not working??
-#stargazer(mod1d,mod1f, title = "Comparison of models mod1f and mod1d", type="html", model.names = FALSE,column.labels = c("mod1f", "mod1d"), column.separate = c(1,1), style = "qje")
+```{r, results="asis"}
+stargazer(mod1d,mod1f, title = "Comparison of models mod1f and mod1d", type="html", model.names = FALSE,column.labels = c("mod1f", "mod1d"), column.separate = c(1,1), style = "qje")
+```
 
+```{r}
 paste("adjusted R_squared of Model 1d:", sum_mod1d$adj.r.squared)
 paste("adjusted R_squared of Model 1f:", sum_mod1f$adj.r.squared)
 ```
 
-Looking at the adjusted $R^2$, it is seen that both models have a quite similar model quality. In both models nearly 20.3% of nettfa variance can be explanied by the predictors. This measurement supports the low significance level of age in model 1d. As mentioned in 1d, $H_0: \theta_2 =0 $ cannot be rejected. Therefore, the variable age can be omitted without losing model quality. 
+Looking at the adjusted $R^2$, it is seen that both models have a quite similar model quality. In both models nearly 20.3% of nettfa variance can be explanied by the predictors. This measurement supports the low significance level of age in model 1d. As mentioned in 1d, $H_0: \space \theta_2 =0$ cannot be rejected. Therefore, the variable age can be omitted without losing model quality. 
 
 #### 1(g) Income of 50,000 
 
@@ -213,10 +219,10 @@ mod2a_resid <- lm(residuals ~ inc + age25 + e401k, data = ksubs_2)
 (sum_mod2a_resid <- summary(mod2a_resid))
 ```
 
-The null hypothesis tests if there is no difference in the variance of the residuals. So H0 implies that our data is homoscedastic distributed (variance of 0). 
+The null hypothesis tests if there is no difference in the variance of the residuals. So $H_0$ implies that our data is homoscedastically distributed (variance of 0). 
 
-$H_0:\delta_1 =0, \delta_2 =0, \delta_3 =0$ ; ($\alpha = 0.05$, two-sided)
-$H_1:\delta_1 !=0, \delta_2 !=0, \delta_3 !=0$
+$H_0:\delta_1 =0, \delta_2 =0, \delta_3 =0$ ; ($\alpha = 0.05$, two-sided) <br/>
+$H_1:\delta_1 \neq0, \delta_2 \neq0, \delta_3 \neq0$
 
 Rejection rule: F > critical value
 
@@ -315,6 +321,10 @@ summary(mod3a)
 
 
 ####3(b) Random Effects
+```{r, warning=FALSE}
+#mod3b <- plm(lwage ~ educ + black + hisp + exper + expersq + married + union, data = wagepan, index = c("lwage","year"), method = "within", effect = "twoways")
+#summary(mod3b)
+```
 
 -> xtreg gleichung :( -> Look for package!
 
